# python-gcpds.em_spectrum_monitor

./: .gitignore  GETTING_STARTED.ipynb  LICENSE  MANIFEST.in  PTNRS_FM_12082024.xlsx  RDS.xlsx  README.md  Radioemisoras Colombia - Radioemisoras 2023.csv  pyproject.toml  python-gcpds.em_spectrum_monitor.wpu  requirements.txt
docs/source/: conf.py
gcpds/em_spectrum_monitor/: RDS.py  VHF1.py  VHF2.py  cs8-IQ.py  detection.py  (+10 more)
notebooks/: locations.ipynb
references/: Radioemisoras_Coordenadas.csv  channels-534_radioemisoras.xlsx
samples_acquired_all_spectrum/: 5G(center freq: 140000000.0, sample rate: 20000000.0, vga gain: 0, lna gain: 0,num samples: 200000(1).npy).npy  5G(center freq: 140000000.0, sample rate: 20000000.0, vga gain: 0, lna gain: 16,num samples: 200000(1).npy).npy  5G(center freq: 140000000.0, sample rate: 20000000.0, vga gain: 14, lna gain: 16,num samples: 200000(1).npy).npy  5G(center freq: 161000000.0, sample rate: 20000000.0, vga gain: 0, lna gain: 0,num samples: 200000(1).npy).npy  5G(center freq: 2575000000.0, sample rate: 20000000.0, vga gain: 14, lna gain: 16,num samples: 200000(1).npy).npy  5G(center freq: 2595000000.0, sample rate: 20000000.0, vga gain: 14, lna gain: 16,num samples: 200000(1).npy).npy  5G(center freq: 2605000000.0, sample rate: 20000000.0, vga gain: 14, lna gain: 16,num samples: 200000(1).npy).npy  5G(center freq: 2615000000.0, sample rate: 20000000.0, vga gain: 14, lna gain: 16,num samples: 200000(1).npy).npy  5G(center freq: 2620000000.0, sample rate: 20000000.0, vga gain: 14, lna gain: 16,num samples: 200000(1).npy).npy  (+48 more)
(+12 files in other folders)
