[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcpds-em_spectrum_monitor"
version = "0.1a1"
description = "Electromagnetic Spectrum Monitor"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "Yeison Cardona", email = "yencardonaal@unal.edu.co" }
]
maintainers = [
    { name = "Yeison Cardona", email = "yencardonaal@unal.edu.co" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8"
]
dependencies = []

[project.urls]
"Download" = "https://github.com/Redes-de-Monitoreo-Multiproposito/python-gcpds.em_spectrum_monitor"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcpds"]

[project.scripts]
# radiant_p4a = "cmd/flush_port.sh"

[project.optional-dependencies]
dev = [
    "pyhackrf2",
    # "networkx",
    # "matplotlib"
    ]
docs = []
